Updated GPS ops file and modified TLE/IO scripts

--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -2,79 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "dc5d8685-f697-425a-a02b-77013844a17b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import required libraries\n",
-    "import os\n",
-    "\n",
-    "class Satellite:\n",
-    "    def __init__(self, name, tle1, tle2):\n",
-    "        \"\"\"\n",
-    "        Initializes a GPS satellite object with TLE data.\n",
-    "        \n",
-    "        :param name: Name of the satellite\n",
-    "        :param tle1: First line of TLE\n",
-    "        :param tle2: Second line of TLE\n",
-    "        \"\"\"\n",
-    "        self.name = name.strip()\n",
-    "        self.tle1 = tle1.strip()\n",
-    "        self.tle2 = tle2.strip()\n",
-    "        self.ssc_number = self.tle1.split()[1]  # Extract SSC Number\n",
-    "        self.epoch = self.tle1.split()[3]  # Extract reference epoch\n",
-    "        self.mean_anomaly = self.tle2.split()[6]  # Extract Mean Anomaly\n",
-    "        self.inclination = self.tle2.split()[2]  # Extract Inclination\n",
-    "        self.raan = self.tle2.split()[3]  # Extract Right Ascension of Ascending Node (RAAN)\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        \"\"\"\n",
-    "        String representation of the Satellite object, formatted like your expected output.\n",
-    "        \"\"\"\n",
-    "        return (f\"\\nSatellite name: {self.name}\\n\"\n",
-    "                f\"SSC Number: {self.ssc_number}\\n\"\n",
-    "                f\"Reference Epoch: {self.epoch}\\n\"\n",
-    "                f\"Mean anomaly: {self.mean_anomaly}\\n\"\n",
-    "                f\"Inclination: {self.inclination}°\\n\"\n",
-    "                f\"RAAN: {self.raan}°\\n\"\n",
-    "                f\"TLE data:\\n{self.tle1}\\n{self.tle2}\\n\")\n",
-    "\n",
-    "def load_gps_tle(tle_file):\n",
-    "    \"\"\"\n",
-    "    Reads the GPS TLE file and returns a list of Satellite objects.\n",
-    "\n",
-    "    :param tle_file: Path to the TLE file\n",
-    "    :return: List of Satellite objects\n",
-    "    \"\"\"\n",
-    "    if not os.path.exists(tle_file):\n",
-    "        raise FileNotFoundError(f\"Error: TLE file '{tle_file}' not found.\")\n",
-    "\n",
-    "    satellites = []\n",
-    "    with open(tle_file, 'r') as file:\n",
-    "        lines = file.readlines()\n",
-    "\n",
-    "    i = 0\n",
-    "    while i < len(lines) - 2:\n",
-    "        name = lines[i].strip()\n",
-    "        tle1 = lines[i + 1].strip()\n",
-    "        tle2 = lines[i + 2].strip()\n",
-    "        satellites.append(Satellite(name, tle1, tle2))\n",
-    "        i += 3  # Move to next satellite\n",
-    "\n",
-    "    return satellites"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "94eb8edd-9f23-47a7-ad66-94db426a933b",
+   "execution_count": 1,
+   "id": "8c9a8732-61d7-4140-9433-8e78cdc10b46",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[NbConvertApp] Converting notebook FileIO.ipynb to script\n",
+      "[NbConvertApp] Writing 2945 bytes to FileIO.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to script FileIO.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6b99e5db-c829-4d87-b415-3fe4714e0451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sensor.sp', 'Station_Parameters.py', 'Tracking_Intervals_Inputs.ipynb', 'Untitled1.ipynb', 'tracking_interval.dat', 'link_inputs.dat', 'Untitled3.ipynb', 'Untitled.ipynb', 'tle.dat', 'Class2.ipynb', 'Tracking_Intervals_Inputs.py', 'Untitled2.ipynb', 'Satellite_TLE_File.py', '__pycache__', 'Station_Parameters.ipynb', 'FileIO.ipynb', 'Satellite_TLE_File.ipynb', 'C:\\\\Users\\\\jinni\\\\Hardware_Tracking_Software\\\\gps-ops.txt', 'Link_Inputs.py', 'satellite.ephem', 'station.dat', 'gps-ops.txt', '.ipynb_checkpoints', 'Link_Inputs.ipynb', '.git', 'C:Notebooks', 'FileIO.py', 'C:Users']\n",
       "Read in 31 satellites\n",
       "\n",
       "Satellite name: GPS BIIR-2  (PRN 13)\n",
@@ -418,31 +373,115 @@
       "2 62339  54.9895 352.7626 0004829 324.9796 131.4950  2.00557063  2057\n",
       "\n"
      ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Geocentric' object has no attribute 'observe'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mFileIO\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mfio\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdt\u001b[39;00m\n",
+      "File \u001b[0;32m~/Hardware_Tracking_Software/FileIO.py:99\u001b[0m\n\u001b[1;32m     96\u001b[0m subpoint \u001b[38;5;241m=\u001b[39m astrometric\u001b[38;5;241m.\u001b[39msubpoint()\n\u001b[1;32m     98\u001b[0m \u001b[38;5;66;03m# Now, we compute the azimuth and elevation from the station's location\u001b[39;00m\n\u001b[0;32m---> 99\u001b[0m alt, az, d \u001b[38;5;241m=\u001b[39m \u001b[43mstation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobserve\u001b[49m(satellite)\u001b[38;5;241m.\u001b[39mapparent()\u001b[38;5;241m.\u001b[39maltaz()\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# Print the results\u001b[39;00m\n\u001b[1;32m    102\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAt time \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mt\u001b[38;5;241m.\u001b[39mutc_iso()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Geocentric' object has no attribute 'observe'"
+     ]
     }
    ],
    "source": [
-    "# Provide the correct file path\n",
-    "tlefile = r'C:\\Users\\jinni\\Hardware_Tracking_Software\\gps-ops.txt'\n",
+    "import FileIO as fio\n",
+    "import numpy as np\n",
+    "import datetime as dt\n",
+    "import "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e8e8f292-8773-4573-afda-a3e2107ddf2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('C:\\\\Users\\\\jinni\\\\Hardware_Tracking_Software\\\\gps-ops.txt',\n",
+       " <http.client.HTTPMessage at 0x103989df0>)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import urllib.request\n",
+    "# Get latest GPS data from Celestrak web site, write it to a file\n",
+    "tlefile=r'C:\\Users\\jinni\\Hardware_Tracking_Software\\gps-ops.txt'\n",
+    "tleurl = 'https://celestrak.org/NORAD/elements/gp.php?GROUP=gps-ops&FORMAT=tle'\n",
     "\n",
+    "# Write the file to the same directory as the code\n",
+    "urllib.request.urlretrieve(tleurl, tlefile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bebba7bf-cf31-45f8-bde7-bbf65a90f548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tlefile=r'C:\\Users\\jinni\\Hardware_Tracking_Software\\gps-ops.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7c3edddd-3d8d-47b4-b91f-babd73cf729e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fio' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m line1\u001b[38;5;241m=\u001b[39mTLEfile\u001b[38;5;241m.\u001b[39mreadline()\n\u001b[1;32m     10\u001b[0m line2\u001b[38;5;241m=\u001b[39mTLEfile\u001b[38;5;241m.\u001b[39mreadline()\n\u001b[0;32m---> 11\u001b[0m Satellite_i \u001b[38;5;241m=\u001b[39m \u001b[43mfio\u001b[49m\u001b[38;5;241m.\u001b[39mSatellite(line0, line1, line2)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(Satellite_i)\n\u001b[1;32m     13\u001b[0m SatCons\u001b[38;5;241m.\u001b[39mappend(Satellite_i)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fio' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "TLEfile=open(tlefile, 'rt')\n",
+    "\n",
+    "SatCons = list()\n",
+    "line0=''\n",
+    "i=0\n",
     "try:\n",
-    "    # Load GPS satellites from the file\n",
-    "    gps_satellites = load_gps_tle(tlefile)\n",
-    "\n",
-    "    # Print total satellites loaded\n",
-    "    print(f\"Read in {len(gps_satellites)} satellites\")\n",
-    "\n",
-    "    # Print details of each satellite\n",
-    "    for sat in gps_satellites:\n",
-    "        print(sat)\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"Error: {e}\")\n"
+    "    while True:\n",
+    "        line0=TLEfile.readline()\n",
+    "        line1=TLEfile.readline()\n",
+    "        line2=TLEfile.readline()\n",
+    "        Satellite_i = fio.Satellite(line0, line1, line2)\n",
+    "        print(Satellite_i)\n",
+    "        SatCons.append(Satellite_i)\n",
+    "        i+=1\n",
+    "except ValueError:\n",
+    "    print(\"Read in\", len(SatCons), \"satellites\")\n",
+    "    TLEfile.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0cd4e2-ae1e-47bd-8468-21c422bbcf1a",
+   "id": "77b4be5b-9db7-44f8-b0ce-3bbe1fa78f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b268c94-ee64-4dad-94f1-b22bd3433d99",
    "metadata": {},
    "outputs": [],
    "source": []
