--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -11,8 +11,8 @@
      "output_type": "stream",
      "text": [
       "Satellite Name: GPS BIIR-2  (PRN 13)\n",
-      "TLE Line 1: 1 24876U 97035A   25076.50113901  .00000022  00000+0  00000+0 0  9993\n",
-      "TLE Line 2: 2 24876  55.7681 116.4396 0087517  53.8685 307.0158  2.00562662202797\n"
+      "TLE Line 1: 1 24876U 97035A   25076.50113892  .00000022  00000+0  00000+0 0  9992\n",
+      "TLE Line 2: 2 24876  55.7681 116.4396 0087517  53.8663 307.0179  2.00562662202796\n"
      ]
     }
    ],
@@ -57,11 +57,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Extracted Epoch String: 25076.50113901\n",
+      "Extracted Epoch String: 25076.50113892\n",
       "\n",
       "Reference Epoch Date: 2025-03-17 00:00:00\n",
-      "Fractional Time (as timedelta): 12:01:38.410464\n",
-      "Final Computed Epoch Datetime: 2025-03-17 12:01:38.410464+00:00\n"
+      "Fractional Time (as timedelta): 12:01:38.402688\n",
+      "Final Computed Epoch Datetime: 2025-03-17 12:01:38.402688+00:00\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Formatted TLE Epoch Time: 17 Mar 2025 12:01:38.410464\n",
+      "Formatted TLE Epoch Time: 17 Mar 2025 12:01:38.402688\n",
       "\n",
       "TLE Epoch in YYDDD format: 25076\n",
       "\n",
@@ -102,7 +102,7 @@
       "\n",
       "Converted Start Time: 2024-05-02 14:00:00+00:00\n",
       "\n",
-      "Seconds from TLE Epoch to Start Time: -27554498.410464\n"
+      "Seconds from TLE Epoch to Start Time: -27554498.402688\n"
      ]
     }
    ],
@@ -139,12 +139,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Current UTC Tracking Time: 2025-03-18 00:25:28.531373+00:00\n",
+      "Current UTC Tracking Time: 2025-03-18 06:29:37.816850+00:00\n",
       "Adjusted UTC Tracking Time: 2025-03-18 17:00:00+00:00\n",
       "\n",
-      "Time Delta (Tracking Time - TLE Epoch): 1 day, 4:58:21.589536\n",
+      "Time Delta (Tracking Time - TLE Epoch): 1 day, 4:58:21.597312\n",
       "\n",
-      "Seconds from TLE Epoch to Tracking Time: 104301.589536\n"
+      "Seconds from TLE Epoch to Tracking Time: 104301.597312\n"
      ]
     }
    ],
@@ -165,6 +165,32 @@
     "tstart = deltat.total_seconds()\n",
     "print(\"\\nSeconds from TLE Epoch to Tracking Time:\", tstart)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4db3eab9-e126-4b98-9622-bcccf52236dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/jinni/Hardware_Tracking_Software\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7141be9-66c9-47b6-847d-7ad4acdab6a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
