Updated GPS ops file and modified TLE/IO scripts

--- a/FileIO.ipynb
+++ b/FileIO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "5337f8aa-8409-415e-b553-943e9295839f",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sensor.sp', 'Station_Parameters.py', 'Tracking_Intervals_Inputs.ipynb', 'Untitled1.ipynb', 'tracking_interval.dat', 'C:\\\\Notebooks\\\\ENG4350\\\\FW23-24\\\\Tracking\\\\gps-ops.txt', 'C:\\\\Users\\\\Hugh\\\\OneDrive - York University\\\\Documents\\\\STK 12\\\\TrackingScenario\\\\gps-ops.txt', 'link_inputs.dat', 'Untitled.ipynb', 'tle.dat', 'Class2.ipynb', 'Tracking_Intervals_Inputs.py', 'Untitled2.ipynb', 'Satellite_TLE_File.py', '__pycache__', 'Station_Parameters.ipynb', 'FileIO.ipynb', 'Satellite_TLE_File.ipynb', 'Link_Inputs.py', 'satellite.ephem', 'station.dat', 'gps-ops.txt', '.ipynb_checkpoints', 'Link_Inputs.ipynb', '.git']\n"
+      "['sensor.sp', 'Station_Parameters.py', 'Tracking_Intervals_Inputs.ipynb', 'Untitled1.ipynb', 'tracking_interval.dat', 'link_inputs.dat', 'Untitled3.ipynb', 'Untitled.ipynb', 'tle.dat', 'Class2.ipynb', 'Tracking_Intervals_Inputs.py', 'Untitled2.ipynb', 'Satellite_TLE_File.py', '__pycache__', 'Station_Parameters.ipynb', 'FileIO.ipynb', 'Satellite_TLE_File.ipynb', 'C:\\\\Users\\\\jinni\\\\Hardware_Tracking_Software\\\\gps-ops.txt', 'Link_Inputs.py', 'satellite.ephem', 'station.dat', 'gps-ops.txt', '.ipynb_checkpoints', 'Link_Inputs.ipynb', '.git', 'C:Notebooks', 'FileIO.py', 'C:Users']\n"
      ]
     }
    ],
@@ -21,20 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "42f8eb29-9bba-4d89-8411-f2c6715ea8ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Satellite_TLE_File.ipynb to script\n",
+      "[NbConvertApp] Writing 2447 bytes to Satellite_TLE_File.py\n"
+     ]
+    }
+   ],
    "source": [
     "#!jupyter nbconvert --to script Station_Parameters.ipynb\n",
-    "#!jupyter nbconvert --to script Satellite_TLE_File.ipynb\n",
+    "!jupyter nbconvert --to script Satellite_TLE_File.ipynb\n",
     "#!jupyter nbconvert --to script Tracking_Intervals_Inputs.ipynb\n",
     "#!jupyter nbconvert --to script Link_Inputs.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "dbb640e3-136a-400f-b62f-a59543981166",
    "metadata": {},
    "outputs": [
@@ -42,18 +51,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetched 31 satellites from Celestrak.\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Satellite' from 'Satellite_TLE_File' (/Users/jinni/Hardware_Tracking_Software/Satellite_TLE_File.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Import all modules\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mStation_Parameters\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Station\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSatellite_TLE_File\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Satellite\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mTracking_Intervals_Inputs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TrackingInterval\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mLink_Inputs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LinkBudget\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Satellite' from 'Satellite_TLE_File' (/Users/jinni/Hardware_Tracking_Software/Satellite_TLE_File.py)"
+      "🚀 Initializing FileIO...\n",
+      "\n",
+      " Loading Station Parameters...\n",
+      "📡 Station: ARO\n",
+      "🌍 Latitude: 45.95550333333333°, Longitude: 281.9269597222222°, Altitude: 260.42 m\n",
+      "⏳ UTC Offset: -4.0 hrs\n",
+      "🔭 Diameter: 46.0 m, Focal Ratio: 0.4, Focal Length: 18.3 m\n",
+      "🎯 Surface Accuracy: 0.32 cm (solid), 0.64 cm (mesh)\n",
+      "📡 Beamwidth: 3.0 arcmin\n",
+      "🔄 AZ Speed Max: 10.0 deg/min, EL Speed Max: 10.0 deg/min\n",
+      "🔼 EL Min Limit: 9.0°, EL Max Limit: 89.0°\n",
+      "🗺️ Azimuth/Elevation Limits:\n",
+      "Azimuth: 0.0°, Min Elev: 9.0°, Max Elev: 89.0°\n",
+      "Loaded 31 satellites.\n",
+      "[<Satellite_TLE_File.Satellite object at 0x10d74f3e0>, <Satellite_TLE_File.Satellite object at 0x10d7544d0>, <Satellite_TLE_File.Satellite object at 0x10d754170>, <Satellite_TLE_File.Satellite object at 0x10d7545f0>, <Satellite_TLE_File.Satellite object at 0x10d755af0>, <Satellite_TLE_File.Satellite object at 0x10d754bf0>, <Satellite_TLE_File.Satellite object at 0x10d754b60>, <Satellite_TLE_File.Satellite object at 0x10d755340>, <Satellite_TLE_File.Satellite object at 0x10d754290>, <Satellite_TLE_File.Satellite object at 0x10d755130>, <Satellite_TLE_File.Satellite object at 0x10d7551c0>, <Satellite_TLE_File.Satellite object at 0x10d755520>, <Satellite_TLE_File.Satellite object at 0x10d755640>, <Satellite_TLE_File.Satellite object at 0x10d7557f0>, <Satellite_TLE_File.Satellite object at 0x10d755160>, <Satellite_TLE_File.Satellite object at 0x10d755850>, <Satellite_TLE_File.Satellite object at 0x10d755970>, <Satellite_TLE_File.Satellite object at 0x10d755d00>, <Satellite_TLE_File.Satellite object at 0x10d755d60>, <Satellite_TLE_File.Satellite object at 0x10d755910>, <Satellite_TLE_File.Satellite object at 0x10d755ca0>, <Satellite_TLE_File.Satellite object at 0x10d7565d0>, <Satellite_TLE_File.Satellite object at 0x10d754620>, <Satellite_TLE_File.Satellite object at 0x10d754f50>, <Satellite_TLE_File.Satellite object at 0x10d7566f0>, <Satellite_TLE_File.Satellite object at 0x10d756630>, <Satellite_TLE_File.Satellite object at 0x10d7569f0>, <Satellite_TLE_File.Satellite object at 0x10d756bd0>, <Satellite_TLE_File.Satellite object at 0x10d756660>, <Satellite_TLE_File.Satellite object at 0x10d756990>, <Satellite_TLE_File.Satellite object at 0x10d756a20>]\n",
+      "\n",
+      " Loading Tracking Interval...\n",
+      "📂 Reading tracking_interval.dat...\n",
+      "⏳ Tracking Interval:\n",
+      "   🕒 Start Time: 2025-03-17 12:00:00 UTC\n",
+      "   ⏳ Duration: 3600 seconds (60.0 min)\n",
+      "   ⏲️ Time Step: 60 seconds (1.0 min)\n",
+      "\n",
+      " Loading Link Budget Inputs...\n",
+      "📂 Reading link_inputs.dat...\n",
+      "📡 Link Budget Parameters:\n",
+      "   📶 Frequency: 1575.42 MHz\n",
+      "   📡 Antenna Efficiency: 0.5\n",
+      "   📡 Antenna Diameter: 46.0 m\n",
+      "   🔊 Bandwidth: 2.0 MHz\n",
+      "   📡 Receiver Gain: 56.0 dB\n",
+      "   🔥 Receiver Noise Temperature: 200.0 K\n"
      ]
     }
    ],
@@ -87,75 +116,46 @@
     "\n",
     "    def load_all_inputs(self):\n",
     "        \"\"\"\n",
-    "        Reads and loads all input files.\n",
+    "        Reads and loads all input files, including station parameters, satellite TLEs, \n",
+    "        tracking intervals, and link budgets.\n",
     "        \"\"\"\n",
-    "        print(\"\\n📡 Loading Station Parameters...\")\n",
+    "    \n",
+    "        print(\"\\n Loading Station Parameters...\")\n",
     "        self.station = Station(self.station_file)\n",
     "        print(self.station)\n",
-    "\n",
-    "        print(\"\\n🛰️ Fetching Satellite TLE Data...\")\n",
-    "        self.satellites = Satellite()\n",
+    "    \n",
+    "        #print(\"\\n Fetching Satellite Data...\")\n",
+    "    \n",
+    "        # Reading the TLE file\n",
+    "        tlefile=r'C:\\Users\\jinni\\Hardware_Tracking_Software\\gps-ops.txt'\n",
+    "        with open(tlefile, 'r') as TLEfile:\n",
+    "         lines = TLEfile.readlines()\n",
+    "    \n",
+    "        self.satellites = []  # Store multiple satellites\n",
+    "        i = 0\n",
+    "        while i < len(lines) - 2:  # Process each satellite (3 lines per entry)\n",
+    "            name = lines[i].strip()   # Satellite name\n",
+    "            tle1 = lines[i + 1].strip()  # TLE Line 1\n",
+    "            tle2 = lines[i + 2].strip()  # TLE Line 2\n",
+    "            self.satellites.append(Satellite(name, tle1, tle2))  \n",
+    "            i += 3  # Move to the next satellite\n",
+    "    \n",
+    "        print(f\"Loaded {len(self.satellites)} satellites.\")\n",
     "        print(self.satellites)\n",
-    "\n",
-    "        print(\"\\n⏳ Loading Tracking Interval...\")\n",
+    "    \n",
+    "        print(\"\\n Loading Tracking Interval...\")\n",
     "        self.tracking = TrackingInterval(self.tracking_file)\n",
     "        print(self.tracking)\n",
-    "\n",
-    "        print(\"\\n📶 Loading Link Budget Inputs...\")\n",
+    "    \n",
+    "        print(\"\\n Loading Link Budget Inputs...\")\n",
     "        self.link_budget = LinkBudget(self.link_file)\n",
     "        print(self.link_budget)\n",
+    "\n",
     "\n",
     "# Example Usage\n",
     "if __name__ == \"__main__\":\n",
     "    print(\"🚀 Initializing FileIO...\")\n",
-    "    file_io = FileIO()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4f0db7fa-f3b9-499a-92dc-392264382ce9",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Geocentric' object has no attribute 'observe'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 21\u001b[0m\n\u001b[1;32m     18\u001b[0m subpoint \u001b[38;5;241m=\u001b[39m astrometric\u001b[38;5;241m.\u001b[39msubpoint()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Now, we compute the azimuth and elevation from the station's location\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m alt, az, d \u001b[38;5;241m=\u001b[39m \u001b[43mstation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobserve\u001b[49m(satellite)\u001b[38;5;241m.\u001b[39mapparent()\u001b[38;5;241m.\u001b[39maltaz()\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# Print the results\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAt time \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mt\u001b[38;5;241m.\u001b[39mutc_iso()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Geocentric' object has no attribute 'observe'"
-     ]
-    }
-   ],
-   "source": [
-    "from skyfield.api import Topos, load\n",
-    "from datetime import datetime\n",
-    "\n",
-    "# Load the TLE data (replace this with actual TLE data from your file)\n",
-    "satellite = load.tle_file('gps-ops.txt')[0]  # Select the first satellite from TLE file\n",
-    "\n",
-    "# Set the station location (latitude, longitude)\n",
-    "station = Topos(latitude_degrees=45.9555033333, longitude_degrees=281.9269597222)\n",
-    "\n",
-    "# Set the observation time\n",
-    "timescale = load.timescale()\n",
-    "t = timescale.utc(2025, 3, 18, 12, 0)  # Set a specific date and time\n",
-    "\n",
-    "# Compute the position of the satellite at time t\n",
-    "astrometric = satellite.at(t)\n",
-    "\n",
-    "# Get the subpoint (latitude and longitude of the satellite's location on Earth)\n",
-    "subpoint = astrometric.subpoint()\n",
-    "\n",
-    "# Now, we compute the azimuth and elevation from the station's location\n",
-    "alt, az, d = station.at(t).observe(satellite).apparent().altaz()\n",
-    "\n",
-    "# Print the results\n",
-    "print(f\"At time {t.utc_iso()}:\")\n",
-    "print(f\"Satellite Position: Latitude {subpoint.latitude.degrees}, Longitude {subpoint.longitude.degrees}\")\n",
-    "print(f\"Azimuth: {az.degrees}°, Elevation: {alt.degrees}°\")\n"
+    "    file_io = FileIO()"
    ]
   },
   {
