--- a/FileIO.ipynb
+++ b/FileIO.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sensor.sp', 'Station_Parameters.py', 'Tracking_Intervals_Inputs.ipynb', 'Untitled1.ipynb', 'tracking_interval.dat', 'link_inputs.dat', 'Untitled3.ipynb', 'Untitled.ipynb', 'tle.dat', 'Class2.ipynb', 'Tracking_Intervals_Inputs.py', 'Untitled2.ipynb', 'Satellite_TLE_File.py', '__pycache__', 'Station_Parameters.ipynb', 'FileIO.ipynb', 'Satellite_TLE_File.ipynb', 'C:\\\\Users\\\\jinni\\\\Hardware_Tracking_Software\\\\gps-ops.txt', 'Link_Inputs.py', 'satellite.ephem', 'station.dat', 'gps-ops.txt', '.ipynb_checkpoints', 'Link_Inputs.ipynb', '.git', 'C:Notebooks', 'FileIO.py', 'C:Users']\n"
+      "['sensor.sp', 'Station_Parameters.py', 'Tracking_Intervals_Inputs.ipynb', 'tracking_interval.dat', 'link_inputs.dat', 'Class5.ipynb', 'tle.dat', 'Class2.ipynb', 'Tracking_Intervals_Inputs.py', 'Untitled2.ipynb', 'Satellite_TLE_File.py', '__pycache__', 'Station_Parameters.ipynb', 'FileIO.ipynb', 'Satellite_TLE_File.ipynb', 'Link_Inputs.py', 'satellite.ephem', 'station.dat', 'gps-ops.txt', '.ipynb_checkpoints', 'Link_Inputs.ipynb', '.git', 'C:Notebooks', 'FileIO.py', 'C:Users']\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Satellite_TLE_File.ipynb to script\n",
-      "[NbConvertApp] Writing 2447 bytes to Satellite_TLE_File.py\n"
+      "[NbConvertApp] Writing 2446 bytes to Satellite_TLE_File.py\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "dbb640e3-136a-400f-b62f-a59543981166",
    "metadata": {},
    "outputs": [
@@ -65,24 +65,26 @@
       "🗺️ Azimuth/Elevation Limits:\n",
       "Azimuth: 0.0°, Min Elev: 9.0°, Max Elev: 89.0°\n",
       "Loaded 31 satellites.\n",
-      "[<Satellite_TLE_File.Satellite object at 0x10d74f3e0>, <Satellite_TLE_File.Satellite object at 0x10d7544d0>, <Satellite_TLE_File.Satellite object at 0x10d754170>, <Satellite_TLE_File.Satellite object at 0x10d7545f0>, <Satellite_TLE_File.Satellite object at 0x10d755af0>, <Satellite_TLE_File.Satellite object at 0x10d754bf0>, <Satellite_TLE_File.Satellite object at 0x10d754b60>, <Satellite_TLE_File.Satellite object at 0x10d755340>, <Satellite_TLE_File.Satellite object at 0x10d754290>, <Satellite_TLE_File.Satellite object at 0x10d755130>, <Satellite_TLE_File.Satellite object at 0x10d7551c0>, <Satellite_TLE_File.Satellite object at 0x10d755520>, <Satellite_TLE_File.Satellite object at 0x10d755640>, <Satellite_TLE_File.Satellite object at 0x10d7557f0>, <Satellite_TLE_File.Satellite object at 0x10d755160>, <Satellite_TLE_File.Satellite object at 0x10d755850>, <Satellite_TLE_File.Satellite object at 0x10d755970>, <Satellite_TLE_File.Satellite object at 0x10d755d00>, <Satellite_TLE_File.Satellite object at 0x10d755d60>, <Satellite_TLE_File.Satellite object at 0x10d755910>, <Satellite_TLE_File.Satellite object at 0x10d755ca0>, <Satellite_TLE_File.Satellite object at 0x10d7565d0>, <Satellite_TLE_File.Satellite object at 0x10d754620>, <Satellite_TLE_File.Satellite object at 0x10d754f50>, <Satellite_TLE_File.Satellite object at 0x10d7566f0>, <Satellite_TLE_File.Satellite object at 0x10d756630>, <Satellite_TLE_File.Satellite object at 0x10d7569f0>, <Satellite_TLE_File.Satellite object at 0x10d756bd0>, <Satellite_TLE_File.Satellite object at 0x10d756660>, <Satellite_TLE_File.Satellite object at 0x10d756990>, <Satellite_TLE_File.Satellite object at 0x10d756a20>]\n",
+      "[<Satellite_TLE_File.Satellite object at 0x106f47b30>, <Satellite_TLE_File.Satellite object at 0x106d4fbc0>, <Satellite_TLE_File.Satellite object at 0x106f4e9c0>, <Satellite_TLE_File.Satellite object at 0x106f4e990>, <Satellite_TLE_File.Satellite object at 0x106f4fb60>, <Satellite_TLE_File.Satellite object at 0x106f4ed50>, <Satellite_TLE_File.Satellite object at 0x106f4fad0>, <Satellite_TLE_File.Satellite object at 0x106f52660>, <Satellite_TLE_File.Satellite object at 0x106f51010>, <Satellite_TLE_File.Satellite object at 0x106f50740>, <Satellite_TLE_File.Satellite object at 0x106f50620>, <Satellite_TLE_File.Satellite object at 0x106f52120>, <Satellite_TLE_File.Satellite object at 0x106f50980>, <Satellite_TLE_File.Satellite object at 0x106f50860>, <Satellite_TLE_File.Satellite object at 0x106f50dd0>, <Satellite_TLE_File.Satellite object at 0x106f51850>, <Satellite_TLE_File.Satellite object at 0x106f50b00>, <Satellite_TLE_File.Satellite object at 0x106f51910>, <Satellite_TLE_File.Satellite object at 0x106f51a90>, <Satellite_TLE_File.Satellite object at 0x106f50260>, <Satellite_TLE_File.Satellite object at 0x106f50320>, <Satellite_TLE_File.Satellite object at 0x106f51be0>, <Satellite_TLE_File.Satellite object at 0x106f51bb0>, <Satellite_TLE_File.Satellite object at 0x106f50350>, <Satellite_TLE_File.Satellite object at 0x106f51dc0>, <Satellite_TLE_File.Satellite object at 0x106f51160>, <Satellite_TLE_File.Satellite object at 0x106f51040>, <Satellite_TLE_File.Satellite object at 0x106f50b90>, <Satellite_TLE_File.Satellite object at 0x106f50da0>, <Satellite_TLE_File.Satellite object at 0x106f50d70>, <Satellite_TLE_File.Satellite object at 0x106f50560>]\n",
       "\n",
       " Loading Tracking Interval...\n",
       "📂 Reading tracking_interval.dat...\n",
+      "❌ Error reading tracking_interval.dat: time data 'Tracking start date/time: 2024-04-21-14:00:00' does not match format '%Y-%m-%d %H:%M:%S' (Check for incorrect values)\n",
       "⏳ Tracking Interval:\n",
-      "   🕒 Start Time: 2025-03-17 12:00:00 UTC\n",
-      "   ⏳ Duration: 3600 seconds (60.0 min)\n",
-      "   ⏲️ Time Step: 60 seconds (1.0 min)\n",
+      "   🕒 Start Time: None UTC\n",
+      "   ⏳ Duration: 0 seconds (0.0 min)\n",
+      "   ⏲️ Time Step: 0 seconds (0.0 min)\n",
       "\n",
       " Loading Link Budget Inputs...\n",
       "📂 Reading link_inputs.dat...\n",
+      "❌ Error reading link_inputs.dat: could not convert string to float: 'Frequency band center, F_cnt MHz: 1575.42' (Check for incorrect values)\n",
       "📡 Link Budget Parameters:\n",
-      "   📶 Frequency: 1575.42 MHz\n",
-      "   📡 Antenna Efficiency: 0.5\n",
-      "   📡 Antenna Diameter: 46.0 m\n",
-      "   🔊 Bandwidth: 2.0 MHz\n",
-      "   📡 Receiver Gain: 56.0 dB\n",
-      "   🔥 Receiver Noise Temperature: 200.0 K\n"
+      "   📶 Frequency: 0.0 MHz\n",
+      "   📡 Antenna Efficiency: 0.0\n",
+      "   📡 Antenna Diameter: 0.0 m\n",
+      "   🔊 Bandwidth: 0.0 MHz\n",
+      "   📡 Receiver Gain: 0.0 dB\n",
+      "   🔥 Receiver Noise Temperature: 0.0 K\n"
      ]
     }
    ],
@@ -127,7 +129,7 @@
     "        #print(\"\\n Fetching Satellite Data...\")\n",
     "    \n",
     "        # Reading the TLE file\n",
-    "        tlefile=r'C:\\Users\\jinni\\Hardware_Tracking_Software\\gps-ops.txt'\n",
+    "        tlefile = 'gps-ops.txt'\n",
     "        with open(tlefile, 'r') as TLEfile:\n",
     "         lines = TLEfile.readlines()\n",
     "    \n",
