Updated GPS ops file and modified TLE/IO scripts

--- a/FileIO.ipynb
+++ b/FileIO.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sensor.sp', 'Station_Parameters.py', 'Tracking_Intervals_Inputs.ipynb', 'tracking_interval.dat', 'link_inputs.dat', 'Class5.ipynb', 'tle.dat', 'Class2.ipynb', 'Tracking_Intervals_Inputs.py', 'Untitled2.ipynb', 'Satellite_TLE_File.py', '__pycache__', 'Station_Parameters.ipynb', 'FileIO.ipynb', 'Satellite_TLE_File.ipynb', 'Link_Inputs.py', 'satellite.ephem', 'station.dat', 'gps-ops.txt', '.ipynb_checkpoints', 'Link_Inputs.ipynb', '.git', 'C:Notebooks', 'FileIO.py', 'C:Users']\n"
+      "['sensor.sp', 'Station_Parameters.py', 'Tracking_Intervals_Inputs.ipynb', 'tracking_interval.dat', 'link_inputs.dat', 'Class5.ipynb', 'tle.dat', 'Class2.ipynb', 'Tracking_Intervals_Inputs.py', 'Untitled2.ipynb', 'Satellite_TLE_File.py', '__pycache__', 'OMPython_draft.ipynb', 'Station_Parameters.ipynb', 'FileIO.ipynb', 'Satellite_TLE_File.ipynb', 'Link_Inputs.py', 'satellite.ephem', 'station.dat', 'gps-ops.txt', '.ipynb_checkpoints', 'Link_Inputs.ipynb', '.git', 'C:Notebooks', 'FileIO.py', 'C:Users']\n"
      ]
     }
    ],
@@ -24,16 +24,7 @@
    "execution_count": 2,
    "id": "42f8eb29-9bba-4d89-8411-f2c6715ea8ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Satellite_TLE_File.ipynb to script\n",
-      "[NbConvertApp] Writing 2467 bytes to Satellite_TLE_File.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!jupyter nbconvert --to script Station_Parameters.ipynb\n",
     "#!jupyter nbconvert --to script Satellite_TLE_File.ipynb\n",
@@ -810,7 +801,7 @@
       "🗺️ Azimuth/Elevation Limits:\n",
       "Azimuth: 0.0°, Min Elev: 9.0°, Max Elev: 89.0°\n",
       "Loaded 31 satellites.\n",
-      "[<Satellite_TLE_File.Satellite object at 0x10e18f110>, <Satellite_TLE_File.Satellite object at 0x10e18ef60>, <Satellite_TLE_File.Satellite object at 0x10e18eff0>, <Satellite_TLE_File.Satellite object at 0x10e18f050>, <Satellite_TLE_File.Satellite object at 0x10e18eab0>, <Satellite_TLE_File.Satellite object at 0x10e18f140>, <Satellite_TLE_File.Satellite object at 0x10e18f200>, <Satellite_TLE_File.Satellite object at 0x10e18f2c0>, <Satellite_TLE_File.Satellite object at 0x10e18f350>, <Satellite_TLE_File.Satellite object at 0x10e18f3e0>, <Satellite_TLE_File.Satellite object at 0x10e18f4a0>, <Satellite_TLE_File.Satellite object at 0x10e18f560>, <Satellite_TLE_File.Satellite object at 0x10e18f620>, <Satellite_TLE_File.Satellite object at 0x10e18f6b0>, <Satellite_TLE_File.Satellite object at 0x10e18f7a0>, <Satellite_TLE_File.Satellite object at 0x10e18f860>, <Satellite_TLE_File.Satellite object at 0x10e18f8f0>, <Satellite_TLE_File.Satellite object at 0x10e18f980>, <Satellite_TLE_File.Satellite object at 0x10e18fa10>, <Satellite_TLE_File.Satellite object at 0x10e18fbc0>, <Satellite_TLE_File.Satellite object at 0x10e18fc50>, <Satellite_TLE_File.Satellite object at 0x10e18fd10>, <Satellite_TLE_File.Satellite object at 0x10e18fda0>, <Satellite_TLE_File.Satellite object at 0x10e18fe30>, <Satellite_TLE_File.Satellite object at 0x10e18fef0>, <Satellite_TLE_File.Satellite object at 0x10e18ff80>, <Satellite_TLE_File.Satellite object at 0x10e1c8050>, <Satellite_TLE_File.Satellite object at 0x10e1c80e0>, <Satellite_TLE_File.Satellite object at 0x10e1c81a0>, <Satellite_TLE_File.Satellite object at 0x10e1c8230>, <Satellite_TLE_File.Satellite object at 0x10e1c82c0>]\n",
+      "[<Satellite_TLE_File.Satellite object at 0x104b7b590>, <Satellite_TLE_File.Satellite object at 0x104b7b3b0>, <Satellite_TLE_File.Satellite object at 0x104b7b440>, <Satellite_TLE_File.Satellite object at 0x104b7b4d0>, <Satellite_TLE_File.Satellite object at 0x104b7b140>, <Satellite_TLE_File.Satellite object at 0x104b7b5c0>, <Satellite_TLE_File.Satellite object at 0x104b7b680>, <Satellite_TLE_File.Satellite object at 0x104b7b740>, <Satellite_TLE_File.Satellite object at 0x104b7b7d0>, <Satellite_TLE_File.Satellite object at 0x104b7b860>, <Satellite_TLE_File.Satellite object at 0x104b7b920>, <Satellite_TLE_File.Satellite object at 0x104b7b9e0>, <Satellite_TLE_File.Satellite object at 0x104b7baa0>, <Satellite_TLE_File.Satellite object at 0x104b7bb30>, <Satellite_TLE_File.Satellite object at 0x104b7bbf0>, <Satellite_TLE_File.Satellite object at 0x104b7bcb0>, <Satellite_TLE_File.Satellite object at 0x104b7bd40>, <Satellite_TLE_File.Satellite object at 0x104b7bdd0>, <Satellite_TLE_File.Satellite object at 0x104b7be60>, <Satellite_TLE_File.Satellite object at 0x104b7bf20>, <Satellite_TLE_File.Satellite object at 0x104b7bfb0>, <Satellite_TLE_File.Satellite object at 0x104bac0b0>, <Satellite_TLE_File.Satellite object at 0x104bac140>, <Satellite_TLE_File.Satellite object at 0x104bac1d0>, <Satellite_TLE_File.Satellite object at 0x104bac290>, <Satellite_TLE_File.Satellite object at 0x104bac320>, <Satellite_TLE_File.Satellite object at 0x104bac3b0>, <Satellite_TLE_File.Satellite object at 0x104bac440>, <Satellite_TLE_File.Satellite object at 0x104bac500>, <Satellite_TLE_File.Satellite object at 0x104bac590>, <Satellite_TLE_File.Satellite object at 0x104bac620>]\n",
       "\n",
       " Loading Tracking Interval...\n",
       "📂 Reading tracking_interval.dat...\n",
